<resources>
    <string name="app_name">AppBookRoom</string>
    <string name="txt_header_login">Đăng Nhập</string>
    <string name="hint_email">Nhập email</string>
    <string name="hint_pass">Mật khẩu </string>
    <string name="quen_mat_khau">Quên mật khẩu ?</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="dang_nhap">Đăng Nhập</string>
    <string name="action_home">Home</string>
    <string name="action_calendar">Calendar</string>
    <string name="action_account">Account</string>
</resources>