<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/vector_445">

                <ImageButton
                    android:layout_width="23dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="16dp"
                    android:background="@color/mainColor"
                    android:src="@drawable/group_8158_backbtn"></ImageButton>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/beausanspro_bold"
                    android:text="@string/txt_header_login"
                    android:textColor="@color/white"
                    android:textFontWeight="700"
                    android:textSize="18sp"
                    android:textStyle="bold"></TextView>

            </RelativeLayout>

            <ImageView
                android:id="@+id/logo_ttc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="133dp"
                android:src="@drawable/logo_ttc_1"></ImageView>

            <RelativeLayout
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo_ttc"
                android:layout_marginTop="58dp">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/shape_btn_email_pass"
                    android:fontFamily="@font/ui_text_regular"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_email"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_color_hint"
                    android:textFontWeight="400"
                    android:textSize="14sp">

                </EditText>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutPass"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/etEmail"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/shape_btn_email_pass"
                    android:gravity="center_vertical"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false"
                    app:passwordToggleDrawable="@drawable/hint_password"
                    app:passwordToggleEnabled="true">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/ui_text_regular"
                        android:gravity="center_vertical"
                        android:hint="@string/hint_pass"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingLeft="12dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/text_color_hint"
                        android:textFontWeight="400"
                        android:textSize="14sp">

                    </androidx.appcompat.widget.AppCompatEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/btn_quenMatKhau"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layoutPass"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="@font/beausanspro_semibold"
                    android:text="@string/quen_mat_khau"
                    android:textColor="@color/mainColor"
                    android:textSize="14sp"></TextView>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/btn_quenMatKhau"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="16dp"
                    android:height="40dp"
                    android:background="@drawable/shape_btn_login"
                    android:fontFamily="@font/ui_text_bold"
                    android:text="@string/dang_nhap"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textFontWeight="700"
                    android:textSize="16sp"
                    android:textStyle="bold"></Button>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</layout>

